--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "@buidlhub/buidlhub-ens-notifications": "^1.0.3",
     "@emotion/core": "^10.0.9",
     "@emotion/styled": "^10.0.9",
-    "@myetherwallet/mewconnect-web-client": "^2.1.11",
-    "@portis/web3": "^2.0.0-beta.59",
-    "@toruslabs/torus-embed": "^1.8.6",
-    "@walletconnect/web3-provider": "^1.3.1",
     "@ensdomains/address-encoder": "^0.2.6",
     "@ensdomains/mock": "^2.0.34",
     "@ensdomains/react-ens-address": "^0.0.27",
     "@ensdomains/ui": "^3.0.58",
+    "@myetherwallet/mewconnect-web-client": "^2.1.11",
+    "@portis/web3": "^2.0.0-beta.59",
+    "@toruslabs/torus-embed": "^1.8.6",
+    "@walletconnect/web3-provider": "^1.3.1",
     "apollo-cache-inmemory": "^1.2.9",
     "apollo-client": "^2.4.5",
     "apollo-link": "^1.2.2",
@@ -57,8 +57,8 @@
     "react-transition-group-plus": "^0.5.3",
     "slugify": "^1.4.6",
     "stackdriver-errors-js": "^0.8.0",
-    "web3modal": "^1.9.1",
-    "web3": "^1.3.0"
+    "web3": "^1.3.0",
+    "web3modal": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -90,6 +90,11 @@
     "i18n": "sync-i18n --files 'public/locales/*.json' --primary en --languages cn --space 2",
     "check-i18n": "npm run i18n -- --check"
   },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-syntax-bigint"
+    ]
+  },
   "prettier": {
     "semi": false,
     "editor.formatOnSave": true,
@@ -102,6 +107,7 @@
     }
   },
   "devDependencies": {
+    "@babel/plugin-syntax-bigint": "^7.8.3",
     "apollo-client-mock": "0.0.8",
     "babel-plugin-macros": "^2.4.2",
     "cypress": "5.6.0",
