replace .eth instances with .badass and add custom ens address env param

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_GRAPH_NODE_URI=http://localhost:8000/subgraphs/name/graphprotocol/ens
+REACT_APP_GRAPH_NODE_URI=https://api.thegraph.com/subgraphs/name/kibagateaux/badassens
+REACT_APP_ENS_ADDRESS=0x36fc69f0983E536D1787cC83f481581f22CCA2A1
