update app to use tld from env var so app can be reused

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_GRAPH_NODE_URI=https://api.thegraph.com/subgraphs/name/kibagateaux/badassens
 REACT_APP_ENS_ADDRESS=0x36fc69f0983E536D1787cC83f481581f22CCA2A1
+REACT_APP_ENS_TLD=badass
