--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_ENS_ADDRESS=0x36fc69f0983E536D1787cC83f481581f22CCA2A1
 REACT_APP_REGISTRAR=0xa271897710a2B22f7A5bE5fEaCb00811d960e0b8
 REACT_APP_REGISTRAR_CONTROLLER=0x82994379b1ec951c8e001dfcec2a7ce8f4f39b97
 REACT_APP_REGISTRAR_TLD=badass
+REACT_APP_TLD_RESOLVER=0x4976fb03c32e5b8cfe2b6ccb31c09ba78ebaba41
