add A reccords to domain management tools

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-REACT_APP_GRAPH_NODE_URI=https://api.thegraph.com/subgraphs/name/kibagateaux/badassens
-REACT_APP_ENS_ADDRESS=0x36fc69f0983E536D1787cC83f481581f22CCA2A1
-REACT_APP_REGISTRAR=0xa271897710a2B22f7A5bE5fEaCb00811d960e0b8
-REACT_APP_REGISTRAR_CONTROLLER=0x82994379b1ec951c8e001dfcec2a7ce8f4f39b97
-REACT_APP_TLD_RESOLVER=0x4976fb03c32e5b8cfe2b6ccb31c09ba78ebaba41
+REACT_APP_GRAPH_NODE_URI=http://localhost:8020/subgraphs/name/kibagateaux/badassens
+REACT_APP_ENS_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+REACT_APP_REGISTRAR=0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9
+REACT_APP_REGISTRAR_CONTROLLER=0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9
+REACT_APP_TLD_RESOLVER=0x0165878A594ca255338adfa4d48449f69242Eb8F
 
 REACT_APP_REGISTRAR_TLD=badass
-REACT_APP_STAGE=production
+REACT_APP_STAGE=local
+REACT_APP_INFURA_ID=58a380d3ecd545b2b5b3dad5d2b18bf0
