--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@ensdomains/address-encoder": "^0.2.6",
     "@ensdomains/mock": "^2.0.34",
     "@ensdomains/react-ens-address": "^0.0.27",
-    "@ensdomains/ui": "https://github.com/hnsfund/ui.git",
+    "@ensdomains/ui": "https://github.com/hnsfund/ui.git#add-dns",
     "apollo-cache-inmemory": "^1.2.9",
     "apollo-client": "^2.4.5",
     "apollo-link": "^1.2.2",
